# cargo-soteria

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: base_runner.rs  help.rs  main.rs  run.rs  runner_common.rs
tests/: integration.rs
tests/fixtures/: fake-soteria-rust.sh
tests/fixtures/many-tests/: Cargo.toml
tests/fixtures/many-tests/src/: lib.rs
tests/fixtures/type-error/: Cargo.toml  expected-stderr.txt  soteria-compile-error.txt
tests/fixtures/type-error/src/: lib.rs
