[package]
name = "soteria"
version = "0.2.1"
edition = "2021"
description = "Cargo subcommand for running soteria-rust analysis"
license = "Apache-2.0"
repository = "https://github.com/soteria-tools/cargo-soteria"
homepage = "https://soteria-tools.com"
readme = "README.md"
keywords = [
  "soteria",
  "symbolic-execution",
  "verification",
  "cargo-subcommand",
  "testing",
]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "cargo-soteria"
path = "src/main.rs"

[package.metadata]
# Pre-built soteria-rust binaries are currently only available for macOS on
# Apple Silicon (macos/aarch64). The build script enforces this at compile time.
supported-platforms = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
colored = "2"
# Parallel test runner:
ctrlc = "3"    # install a Ctrl-C handler to tear down running workers
libc = "0.2"   # killpg(2) to SIGKILL each worker's process group
tempfile = "3" # per-test merged stdout/stderr capture files
